--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -31,4 +31,4 @@
 
   = load_select_popups_for(@account, :tasks, :contacts, :opportunities)
 
-  = render :partial => "versions/versions", :locals => {:object => @campaign}
+  = render :partial => "versions/versions", :locals => {:object => @account}
