--- a/app/views/leads/show.html.haml
+++ b/app/views/leads/show.html.haml
@@ -24,4 +24,4 @@
 
   = load_select_popups_for(@lead, :tasks)
 
-  = render :partial => "versions/versions", :locals => {:object => @contact}
+  = render :partial => "versions/versions", :locals => {:object => @lead}
