--- a/app/views/opportunities/show.html.haml
+++ b/app/views/opportunities/show.html.haml
@@ -25,12 +25,4 @@
 
   = load_select_popups_for(@opportunity, :tasks, :contacts)
 
-  %br( style="clear:both" )
-
-  - if Setting.paper_trail_ui_enabled
-    %br
-    = content_tag(:div, t(:versions), :class => :subtitle)
-    .list#versions
-      - @versions = Version.history(@opportunity).paginate(:page => 1, :per_page => 20)
-      = render :partial => "versions/version", :collection => @versions
-    = will_paginate @versions, :id => true, :params => {:action => :versions}
+  = render :partial => "versions/versions", :locals => {:object => @opportunity}
